# singularity-parser

./: .gitignore  alembic.ini  pyproject.toml
singularity_parser/: backup_files_loader.py  backup_files_mapper.py  backup_files_repository.py  main.py
singularity_parser/alembic/versions/: 12b9aa97f394_add_modificated_date_column.py  2f4eaa654abc_add_tasks_table.py  858e2bcc1387_make_singualirty_dates_in_tasks_table_.py  ceff537345f6_add_projects_table.py  d1c86802d25b_add_jsonb_column_type_to_backup_files_.py  da8de809bcc2_create_backup_files_table.py
